--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Docker Login LCAS
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         # Server address of Docker registry. If not set then will default to Docker Hub
         registry: lcas.lincoln.ac.uk
@@ -36,20 +36,15 @@ jobs:
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.LCAS_REGISTRY_TOKEN }}
     - name: Docker Login dockerhub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         # Username used to log against the Docker registry
         username: ${{ secrets.DOCKERHUB_USER }}
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    #- name: Build the Docker image
-    #  run: docker build . --file Dockerfile --tag lcas.lincoln.ac.uk/uollcas/teaching:latest
-    #- name: Push the Docker image
-    #  run: docker push lcas.lincoln.ac.uk/uollcas/teaching:latest
-    # don't use buildx yet as our registry can't handle it yet
-    # - uses: docker/setup-buildx-action@v2
+
     - name: Build Docker Image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
         context: .
         file: ./Dockerfile
@@ -57,5 +52,5 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: lcas.lincoln.ac.uk/lcas/ros:${{ matrix.tag }}
         build-args: |
-            BASE_IMAGE=ros/${{ matrix.tag }}
+            BASE_IMAGE=ros:${{ matrix.tag }}
             BRANCH=${{ env.BRANCH }}
