--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -57,7 +57,7 @@ jobs:
       with:
         context: .
         file: ./Dockerfile.opengl
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ matrix.push_tag }}
         build-args: |
