--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -30,7 +30,7 @@ jobs:
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: lcas.lincoln.ac.uk/lcas/ros:jammy-humble-cuda12.2-opengl
-            - base_image: nvidia/12.6.2-cudnn-devel-ubuntu22.04
+            - base_image: nvidia/cuda:12.6.2-cudnn-devel-ubuntu22.04
               ros_distro: humble
               push_tag: lcas.lincoln.ac.uk/lcas/ros:jammy-humble-cuda12.6-opengl
   
