--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-amd64:
     runs-on: lcas
     strategy:
         matrix:
@@ -57,7 +57,59 @@ jobs:
       with:
         context: .
         file: ./Dockerfile.opengl
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ matrix.push_tag }}
+        build-args: |
+            BASE_IMAGE=${{ matrix.base_image }}
+            BRANCH=${{ env.BRANCH }}
+            ROS_DISTRO=${{ matrix.ros_distro }}
+
+  build-arm64:
+    runs-on: lcas-runc
+    strategy:
+        matrix:
+          include:
+            - base_image: ubuntu:jammy
+              ros_distro: humble
+              push_tag: lcas.lincoln.ac.uk/lcas/ros:jammy-humble-arm
+            - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
+              ros_distro: humble
+              push_tag: lcas.lincoln.ac.uk/lcas/ros:jammy-humble-cuda11.8-opengl-arm
+            - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
+              ros_distro: humble
+              push_tag: lcas.lincoln.ac.uk/lcas/ros:jammy-humble-cuda12.1-opengl-arm
+            - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
+              ros_distro: humble
+              push_tag: lcas.lincoln.ac.uk/lcas/ros:jammy-humble-cuda12.2-opengl-arm
+  
+    steps:
+    - name: Node Js
+      uses: actions/setup-node@v4
+      with:
+        node-version: "^16.13.0 || >=18.0.0"
+    - uses: actions/checkout@v3
+    - name: What
+      run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+    - name: Docker Login LCAS
+      if: ${{ github.event_name != 'pull_request' }}
+      # You may pin to the exact commit or the version.
+      # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@v3
+      with:
+        # Server address of Docker registry. If not set then will default to Docker Hub
+        registry: lcas.lincoln.ac.uk
+        # Username used to log against the Docker registry
+        username: ${{ secrets.LCAS_REGISTRY_PUSHER }}
+        # Password or personal access token used to log against the Docker registry
+        password: ${{ secrets.LCAS_REGISTRY_TOKEN }}
+
+    - name: Build Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile.opengl
+        platforms: linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ matrix.push_tag }}
         build-args: |
