fixed TARGETARCH Argument

--- a/Dockerfile.opengl
+++ b/Dockerfile.opengl
@@ -157,6 +157,7 @@ ENV DEBIAN_FRONTEND=
 FROM lcas as openglvnc
 
 ARG ENTRY_POINT=/opt/entrypoint.sh
+ARG TARGETARCH
 ENV ENTRY_POINT=${ENTRY_POINT}
 
 ENV DEBIAN_FRONTEND=noninteractive
