--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -69,8 +69,8 @@ jobs:
           lcas.lincoln.ac.uk/lcas/ros
         # generate Docker tags based on the following events/attributes
         tags: |
-          type=ref,event=branch,value=${{ matrix.push_tag }}
-          type=ref,event=branch,value=${{ matrix.push_tag }}-amd64
+          type=raw,enable=${{ github.event_name != 'pull_request' }},value=${{ matrix.push_tag }}
+          type=raw,enable=${{ github.event_name != 'pull_request' }},value=${{ matrix.push_tag }}-amd64
           type=ref,event=branch,prefix=${{ matrix.push_tag }}-
           type=ref,event=pr,prefix=${{ matrix.push_tag }}-pr-
           type=semver,pattern={{version}},prefix=${{ matrix.push_tag }}-
@@ -147,7 +147,7 @@ jobs:
           lcas.lincoln.ac.uk/lcas/ros
         # generate Docker tags based on the following events/attributes
         tags: |
-          type=ref,event=branch,value=${{ matrix.push_tag }}
+          type=raw,enable=${{ github.event_name != 'pull_request' }},value=${{ matrix.push_tag }}
           type=ref,event=branch,prefix=${{ matrix.push_tag }}-
           type=ref,event=pr,prefix=${{ matrix.push_tag }}-pr-
           type=semver,pattern={{version}},prefix=${{ matrix.push_tag }}-
