don't use latest tag ever, it's not valid in our use case

--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -61,6 +61,8 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
+        flavor: |
+          latest=false
         labels: |
           org.opencontainers.image.description=L-CAS ROS2 Docker Image with virtual X11 embedded (flavour: ${{ matrix.push_tag }})
           org.opencontainers.image.authors=L-CAS Team
@@ -139,6 +141,8 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
+        flavor: |
+          latest=false
         labels: |
           org.opencontainers.image.description=L-CAS ROS2 Docker Image with virtual X11 embedded (flavour: ${{ matrix.push_tag }})
           org.opencontainers.image.authors=L-CAS Team
