attempt to change background

--- a/Dockerfile.opengl
+++ b/Dockerfile.opengl
@@ -203,7 +203,9 @@ EOF
 
 COPY start-turbovnc.sh /opt/nvidia/entrypoint.d/90-turbovnc.sh
 COPY lcas.jpg /usr/share/backgrounds/xfce/xfce-teal.jpg
+COPY lcas.png /usr/share/backgrounds/xfce/xfce-verticals.png
 COPY lcas.jpg /usr/share/backgrounds/xfce/
+COPY lcas.png /usr/share/backgrounds/xfce/
 RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" > /opt/nvidia/entrypoint.d/91-ros.sh
 
 COPY entrypoint.sh /opt/entrypoint.sh
