--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -86,6 +86,7 @@ jobs:
         file: ./Dockerfile.opengl
         platforms: linux/amd64
         push: ${{ github.event_name != 'pull_request' }}
+        cache-from: type=registry,ref=lcas.lincoln.ac.uk/lcas/ros:${{ matrix.push_tag }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
@@ -164,6 +165,7 @@ jobs:
         context: .
         file: ./Dockerfile.opengl
         platforms: linux/arm64
+        cache-from: type=registry,ref=lcas.lincoln.ac.uk/lcas/ros:${{ matrix.push_tag }}
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
