--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -26,9 +26,9 @@ jobs:
             - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda11.8-opengl
-            - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
-              ros_distro: humble
-              push_tag: jammy-humble-cuda12.1-opengl
+            # - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
+            #   ros_distro: humble
+            #   push_tag: jammy-humble-cuda12.1-opengl
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.2-opengl
@@ -110,9 +110,9 @@ jobs:
             - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda11.8-opengl-arm64
-            - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
-              ros_distro: humble
-              push_tag: jammy-humble-cuda12.1-opengl-arm64
+            # - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
+            #   ros_distro: humble
+            #   push_tag: jammy-humble-cuda12.1-opengl-arm64
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.2-opengl-arm64
@@ -129,7 +129,6 @@ jobs:
     - name: What
       run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Docker Login LCAS
-      if: ${{ github.event_name != 'pull_request' }}
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       uses: docker/login-action@v3
