--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -26,9 +26,9 @@ jobs:
             - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda11.8-opengl
-            - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
-              ros_distro: humble
-              push_tag: jammy-humble-cuda12.1-opengl
+            # - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
+            #   ros_distro: humble
+            #   push_tag: jammy-humble-cuda12.1-opengl
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.2-opengl
@@ -45,7 +45,6 @@ jobs:
     - name: What
       run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Docker Login LCAS
-      if: ${{ github.event_name != 'pull_request' }}
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       uses: docker/login-action@v3
@@ -71,21 +70,26 @@ jobs:
           lcas.lincoln.ac.uk/lcas/ros
         # generate Docker tags based on the following events/attributes
         tags: |
+          type=raw,value=${{ matrix.push_tag }}-staging
           type=raw,enable=${{ github.event_name != 'pull_request' }},value=${{ matrix.push_tag }}
           type=raw,enable=${{ github.event_name != 'pull_request' }},value=${{ matrix.push_tag }}-amd64
-          type=ref,event=branch,prefix=${{ matrix.push_tag }}-
-          type=ref,event=pr,prefix=${{ matrix.push_tag }}-pr-
+          type=ref,enable=${{ github.event_name != 'pull_request' }},event=branch,prefix=${{ matrix.push_tag }}-
           type=semver,pattern={{version}},prefix=${{ matrix.push_tag }}-
           type=semver,pattern={{major}}.{{minor}},prefix=${{ matrix.push_tag }}-
           type=semver,pattern={{major}},prefix=${{ matrix.push_tag }}-
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      
     - name: Build Docker Image
       uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile.opengl
         platforms: linux/amd64
-        push: ${{ github.event_name != 'pull_request' }}
+        push: true
+        cache-from: type=registry,ref=lcas.lincoln.ac.uk/cache/lcas/ros:${{ matrix.push_tag }}
+        cache-to: type=registry,ref=lcas.lincoln.ac.uk/cache/lcas/ros:${{ matrix.push_tag }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
@@ -106,9 +110,9 @@ jobs:
             - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda11.8-opengl-arm64
-            - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
-              ros_distro: humble
-              push_tag: jammy-humble-cuda12.1-opengl-arm64
+            # - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
+            #   ros_distro: humble
+            #   push_tag: jammy-humble-cuda12.1-opengl-arm64
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.2-opengl-arm64
@@ -125,7 +129,6 @@ jobs:
     - name: What
       run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Docker Login LCAS
-      if: ${{ github.event_name != 'pull_request' }}
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       uses: docker/login-action@v3
@@ -151,20 +154,25 @@ jobs:
           lcas.lincoln.ac.uk/lcas/ros
         # generate Docker tags based on the following events/attributes
         tags: |
+          type=raw,value=${{ matrix.push_tag }}-staging
           type=raw,enable=${{ github.event_name != 'pull_request' }},value=${{ matrix.push_tag }}
-          type=ref,event=branch,prefix=${{ matrix.push_tag }}-
-          type=ref,event=pr,prefix=${{ matrix.push_tag }}-pr-
+          type=ref,enable=${{ github.event_name != 'pull_request' }},event=branch,prefix=${{ matrix.push_tag }}-
           type=semver,pattern={{version}},prefix=${{ matrix.push_tag }}-
           type=semver,pattern={{major}}.{{minor}},prefix=${{ matrix.push_tag }}-
           type=semver,pattern={{major}},prefix=${{ matrix.push_tag }}-
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      
     - name: Build Docker Image
       uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile.opengl
         platforms: linux/arm64
-        push: ${{ github.event_name != 'pull_request' }}
+        cache-from: type=registry,ref=lcas.lincoln.ac.uk/cache/lcas/ros:${{ matrix.push_tag }}
+        cache-to: type=registry,ref=lcas.lincoln.ac.uk/cache/lcas/ros:${{ matrix.push_tag }}
+        push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
