--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -20,21 +20,26 @@ jobs:
     strategy:
         matrix:
           include:
-            - base_image: ubuntu:jammy
-              ros_distro: humble
-              push_tag: jammy-humble
-            - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
-              ros_distro: humble
-              push_tag: jammy-humble-cuda11.8-opengl
+            # - base_image: ubuntu:jammy
+            #   ros_distro: humble
+            #   push_tag: jammy-humble
+            # - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
+            #   ros_distro: humble
+            #   push_tag: jammy-humble-cuda11.8-opengl
             # - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
             #   ros_distro: humble
             #   push_tag: jammy-humble-cuda12.1-opengl
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.2-opengl
+
             - base_image: nvidia/cuda:12.6.2-cudnn-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.6-opengl
+
+            - base_image: nvidia/cuda:12.6.3-cudnn-devel-ubuntu24.04
+              ros_distro: rolling
+              push_tag: noble-rolling-cuda12.2-opengl
   
     steps:
     - name: Node Js
@@ -85,7 +90,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./Dockerfile.opengl
+        file: ./nvidia.dockerfile
         platforms: linux/amd64
         push: true
         cache-from: type=registry,ref=lcas.lincoln.ac.uk/cache/lcas/ros:${{ matrix.push_tag }}
@@ -104,21 +109,26 @@ jobs:
     strategy:
         matrix:
           include:
-            - base_image: ubuntu:jammy
-              ros_distro: humble
-              push_tag: jammy-humble-arm64
-            - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
-              ros_distro: humble
-              push_tag: jammy-humble-cuda11.8-opengl-arm64
+            # - base_image: ubuntu:jammy
+            #   ros_distro: humble
+            #   push_tag: jammy-humble-arm64
+            # - base_image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
+            #   ros_distro: humble
+            #   push_tag: jammy-humble-cuda11.8-opengl-arm64
             # - base_image: nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
             #   ros_distro: humble
             #   push_tag: jammy-humble-cuda12.1-opengl-arm64
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.2-opengl-arm64
+
             - base_image: nvidia/cuda:12.6.2-cudnn-devel-ubuntu22.04
               ros_distro: humble
               push_tag: jammy-humble-cuda12.6-opengl-arm64
+
+            - base_image: nvidia/cuda:12.6.3-cudnn-devel-ubuntu24.04
+              ros_distro: rolling
+              push_tag: noble-rolling-cuda12.2-opengl
 
     steps:
     - name: Node Js
@@ -168,7 +178,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./Dockerfile.opengl
+        file: ./nvidia.dockerfile
         platforms: linux/arm64
         cache-from: type=registry,ref=lcas.lincoln.ac.uk/cache/lcas/ros:${{ matrix.push_tag }}
         cache-to: type=registry,ref=lcas.lincoln.ac.uk/cache/lcas/ros:${{ matrix.push_tag }}
