add caching support to Docker build workflow for OpenGL

--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -93,6 +93,9 @@ jobs:
         file: ./nvidia.dockerfile
         platforms: linux/amd64
         push: true
+        load: true
+        cache-from: type=local,src=/tmp/cache
+        cache-to: type=local,src=/tmp/cache
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
@@ -179,6 +182,9 @@ jobs:
         file: ./nvidia.dockerfile
         platforms: linux/arm64
         push: true
+        load: true
+        cache-from: type=local,src=/tmp/cache
+        cache-to: type=local,src=/tmp/cache
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         build-args: |
