--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -87,7 +87,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         buildkitd-config-inline: |
-          [registry."cache"]
+          [registry."cache:5000"]
             http = true
             insecure = true
 
