fix: disable fail-fast in Docker build workflow for improved job execution

--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -17,6 +17,7 @@ jobs:
     runs-on: 
       - lcas
     strategy:
+        fail-fast: false
         matrix:
           include:
             - base_image: nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
