--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -17,6 +17,7 @@ jobs:
     name: Build ${{ matrix.push_tag }} OpenGL Desktop Images (${{ github.event_name }} by ${{ github.actor }})
     runs-on: 
       - lcas
+      - qemu
     strategy:
         fail-fast: false
         matrix:
